# my_wallet

./: .env.dev.example  .gitignore  manage.py  pyproject.toml
apps/account/: admin.py  forms.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/account/management/commands/: csu.py  test_com.py
apps/account/templates/account/: base.html  email_verification.html  email_verification_error.html  signin.html  signup.html  signup_confirm.html  signup_done.html
apps/account/templates/account/password/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt
config/: celery.py  settings.py  urls.py
config/settings/: base.py  dev.py
static/css/: account.css
